clucalc/target/generated-sources/antlr/de/gaalop/clucalc/input/CluCalcParser.java
// $ANTLR 3.1.1 de\\gaalop\\clucalc\\input\\CluCalcParser.g 2016-07-22 23:31:07

  package de.gaalop.clucalc.input;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CluCalcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECIMAL_LITERAL", "EXPONENT", "FLOATTYPESUFFIX", "FLOATING_POINT_LITERAL", "RANGE_LITERAL", "UNROLL_LITERAL", "COUNT_LITERAL", "STRING_LITERAL", "MINUS", "OPNS", "IPNS", "IF", "ELSE", "LOOP", "BREAK", "SLIDER_LITERAL", "COLOR_LITERAL", "BGCOLOR_LITERAL", "BLACK", "BLUE", "CYAN", "GREEN", "MAGENTA", "ORANGE", "RED", "WHITE", "YELLOW", "LETTER", "DIGIT", "IDENTIFIER", "ARGUMENT_PREFIX", "WS", "COMMENT", "PRAGMA", "LINE_COMMENT", "EQUALS", "COMMA", "PLUS", "STAR", "SLASH", "MODULO", "LSBRACKET", "RSBRACKET", "LBRACKET", "RBRACKET", "CLBRACKET", "CRBRACKET", "REVERSE", "NOT", "DOUBLE_NOT", "SEMICOLON", "WEDGE", "DOT", "QUESTIONMARK", "COLON", "DOUBLE_BAR", "DOUBLE_AND", "DOUBLE_EQUALS", "UNEQUAL", "LESS", "GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "REFERENCE_OPERATOR", "FUNCTION", "NEGATION", "DUAL", "BLOCK", "ELSEIF", "MACRO", "ARGUMENT", "RETURN", "SLIDER", "STRING", "COLOR", "BGCOLOR", "IGNORE_LITERAL"
    };
    public static final int LETTER=31;
    public static final int ELSEIF=72;
    public static final int UNROLL_LITERAL=9;
    public static final int LOOP=17;
    public static final int BGCOLOR_LITERAL=21;
    public static final int IPNS=14;
    public static final int MINUS=12;
    public static final int GREATER_OR_EQUAL=66;
    public static final int SLIDER=76;
    public static final int SEMICOLON=54;
    public static final int COLOR=78;
    public static final int BREAK=18;
    public static final int ELSE=16;
    public static final int SLIDER_LITERAL=19;
    public static final int PRAGMA=37;
    public static final int BLACK=22;
    public static final int REVERSE=51;
    public static final int IF=15;
    public static final int RANGE_LITERAL=8;
    public static final int DOUBLE_AND=60;
    public static final int COUNT_LITERAL=10;
    public static final int DOUBLE_EQUALS=61;
    public static final int ARGUMENT_PREFIX=34;
    public static final int MODULO=44;
    public static final int DOT=56;
    public static final int BLOCK=71;
    public static final int DOUBLE_NOT=53;
    public static final int FUNCTION=68;
    public static final int NOT=52;
    public static final int LINE_COMMENT=38;
    public static final int MAGENTA=26;
    public static final int LESS=63;
    public static final int YELLOW=30;
    public static final int CYAN=24;
    public static final int CRBRACKET=50;
    public static final int PLUS=41;
    public static final int COLOR_LITERAL=20;
    public static final int CLBRACKET=49;
    public static final int OPNS=13;
    public static final int BLUE=23;
    public static final int BGCOLOR=79;
    public static final int COMMENT=36;
    public static final int RSBRACKET=46;
    public static final int RETURN=75;
    public static final int QUESTIONMARK=57;
    public static final int REFERENCE_OPERATOR=67;
    public static final int ARGUMENT=74;
    public static final int IDENTIFIER=33;
    public static final int WS=35;
    public static final int DUAL=70;
    public static final int EOF=-1;
    public static final int IGNORE_LITERAL=80;
    public static final int ORANGE=27;
    public static final int COMMA=40;
    public static final int WHITE=29;
    public static final int EQUALS=39;
    public static final int UNEQUAL=62;
    public static final int FLOATING_POINT_LITERAL=7;
    public static final int SLASH=43;
    public static final int GREATER=64;
    public static final int LBRACKET=47;
    public static final int NEGATION=69;
    public static final int RBRACKET=48;
    public static final int COLON=58;
    public static final int FLOATTYPESUFFIX=6;
    public static final int GREEN=25;
    public static final int DIGIT=32;
    public static final int DOUBLE_BAR=59;
    public static final int LSBRACKET=45;
    public static final int RED=28;
    public static final int LESS_OR_EQUAL=65;
    public static final int STAR=42;
    public static final int MACRO=73;
    public static final int EXPONENT=5;
    public static final int STRING=77;
    public static final int STRING_LITERAL=11;
    public static final int WEDGE=55;
    public static final int DECIMAL_LITERAL=4;

    // delegates
    // delegators


        public CluCalcParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CluCalcParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[100+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CluCalcParser.tokenNames; }
    public String getGrammarFileName() { return "de\\gaalop\\clucalc\\input\\CluCalcParser.g"; }


        private List<String> errors = new ArrayList<String>();
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errors.add(hdr + " " + msg);
        }
        public List<String> getErrors() {
            return errors;
        }


    public static class script_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:45:1: script : ( statement )* EOF ;
    public final CluCalcParser.script_return script() throws RecognitionException {
        CluCalcParser.script_return retval = new CluCalcParser.script_return();
        retval.start = input.LT(1);
        int script_StartIndex = input.index();
        Object root_0 = null;

        Token EOF2=null;
        CluCalcParser.statement_return statement1 = null;


        Object EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:45:9: ( ( statement )* EOF )
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:46:3: ( statement )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:46:3: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DECIMAL_LITERAL||LA1_0==FLOATING_POINT_LITERAL||LA1_0==MINUS||LA1_0==IF||(LA1_0>=LOOP && LA1_0<=BREAK)||LA1_0==BGCOLOR_LITERAL||(LA1_0>=IDENTIFIER && LA1_0<=ARGUMENT_PREFIX)||LA1_0==PRAGMA||LA1_0==STAR||LA1_0==LBRACKET||LA1_0==CLBRACKET||LA1_0==REVERSE||(LA1_0>=DOUBLE_NOT && LA1_0<=SEMICOLON)||(LA1_0>=QUESTIONMARK && LA1_0<=COLON)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_script127);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_script130); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, script_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "script"

    public static class float_literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "float_literal"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:49:1: float_literal : ( MINUS )? FLOATING_POINT_LITERAL ;
    public final CluCalcParser.float_literal_return float_literal() throws RecognitionException {
        CluCalcParser.float_literal_return retval = new CluCalcParser.float_literal_return();
        retval.start = input.LT(1);
        int float_literal_StartIndex = input.index();
        Object root_0 = null;

        Token MINUS3=null;
        Token FLOATING_POINT_LITERAL4=null;

        Object MINUS3_tree=null;
        Object FLOATING_POINT_LITERAL4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:49:14: ( ( MINUS )? FLOATING_POINT_LITERAL )
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:50:3: ( MINUS )? FLOATING_POINT_LITERAL
            {
            root_0 = (Object)adaptor.nil();

            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:50:3: ( MINUS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==MINUS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:0:0: MINUS
                    {
                    MINUS3=(Token)match(input,MINUS,FOLLOW_MINUS_in_float_literal144); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS3_tree = (Object)adaptor.create(MINUS3);
                    adaptor.addChild(root_0, MINUS3_tree);
                    }

                    }
                    break;

            }

            FLOATING_POINT_LITERAL4=(Token)match(input,FLOATING_POINT_LITERAL,FOLLOW_FLOATING_POINT_LITERAL_in_float_literal147); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            FLOATING_POINT_LITERAL4_tree = (Object)adaptor.create(FLOATING_POINT_LITERAL4);
            adaptor.addChild(root_0, FLOATING_POINT_LITERAL4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, float_literal_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "float_literal"

    public static class pragma_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pragma"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:56:1: pragma : ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA IGNORE_LITERAL IDENTIFIER );
    public final CluCalcParser.pragma_return pragma() throws RecognitionException {
        CluCalcParser.pragma_return retval = new CluCalcParser.pragma_return();
        retval.start = input.LT(1);
        int pragma_StartIndex = input.index();
        Object root_0 = null;

        Token PRAGMA5=null;
        Token RANGE_LITERAL6=null;
        Token LESS_OR_EQUAL8=null;
        Token IDENTIFIER9=null;
        Token LESS_OR_EQUAL10=null;
        Token PRAGMA12=null;
        Token IGNORE_LITERAL13=null;
        Token IDENTIFIER14=null;
        CluCalcParser.float_literal_return float_literal7 = null;

        CluCalcParser.float_literal_return float_literal11 = null;


        Object PRAGMA5_tree=null;
        Object RANGE_LITERAL6_tree=null;
        Object LESS_OR_EQUAL8_tree=null;
        Object IDENTIFIER9_tree=null;
        Object LESS_OR_EQUAL10_tree=null;
        Object PRAGMA12_tree=null;
        Object IGNORE_LITERAL13_tree=null;
        Object IDENTIFIER14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:57:3: ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA IGNORE_LITERAL IDENTIFIER )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PRAGMA) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==RANGE_LITERAL) ) {
                    alt3=1;
                }
                else if ( (LA3_1==IGNORE_LITERAL) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:57:5: PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA5=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma162); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA5_tree = (Object)adaptor.create(PRAGMA5);
                    adaptor.addChild(root_0, PRAGMA5_tree);
                    }
                    RANGE_LITERAL6=(Token)match(input,RANGE_LITERAL,FOLLOW_RANGE_LITERAL_in_pragma164); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RANGE_LITERAL6_tree = (Object)adaptor.create(RANGE_LITERAL6);
                    adaptor.addChild(root_0, RANGE_LITERAL6_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma166);
                    float_literal7=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal7.getTree());
                    LESS_OR_EQUAL8=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma168); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL8_tree = (Object)adaptor.create(LESS_OR_EQUAL8);
                    adaptor.addChild(root_0, LESS_OR_EQUAL8_tree);
                    }
                    IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma170); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER9_tree = (Object)adaptor.create(IDENTIFIER9);
                    adaptor.addChild(root_0, IDENTIFIER9_tree);
                    }
                    LESS_OR_EQUAL10=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma172); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL10_tree = (Object)adaptor.create(LESS_OR_EQUAL10);
                    adaptor.addChild(root_0, LESS_OR_EQUAL10_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma174);
                    float_literal11=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal11.getTree());

                    }
                    break;
                case 2 :
                    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:58:5: PRAGMA IGNORE_LITERAL IDENTIFIER
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA12=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma180); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA12_tree = (Object)adaptor.create(PRAGMA12);
                    adaptor.addChild(root_0, PRAGMA12_tree);
                    }
                    IGNORE_LITERAL13=(Token)match(input,IGNORE_LITERAL,FOLLOW_IGNORE_LITERAL_in_pragma182); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IGNORE_LITERAL13_tree = (Object)adaptor.create(IGNORE_LITERAL13);
                    adaptor.addChild(root_0, IGNORE_LITERAL13_tree);
                    }
                    IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma184); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER14_tree = (Object)adaptor.create(IDENTIFIER14);
                    adaptor.addChild(root_0, IDENTIFIER14_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, pragma_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "pragma"

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:64:1: expression : ( lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | logical_or_expression );
    public final CluCalcParser.expression_return expression() throws RecognitionException {
        CluCalcParser.expression_return retval = new CluCalcParser.expression_return();
        retval.start = input.LT(1);
        int expression_StartIndex = input.index();
        Object root_0 = null;

        Token EQUALS16=null;
        CluCalcParser.lvalue_return lvalue15 = null;

        CluCalcParser.expression_return expression17 = null;

        CluCalcParser.logical_or_expression_return logical_or_expression18 = null;


        Object EQUALS16_tree=null;
        RewriteRuleTokenStream stream_EQUALS=new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleSubtreeStream stream_lvalue=new RewriteRuleSubtreeStream(adaptor,"rule lvalue");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:65:3: ( lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | logical_or_expression )
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:65:5: lvalue EQUALS expression
                    {
                    pushFollow(FOLLOW_lvalue_in_expression199);
                    lvalue15=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_lvalue.add(lvalue15.getTree());
                    EQUALS16=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_expression201); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS16);

                    pushFollow(FOLLOW_expression_in_expression203);
                    expression17=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression17.getTree());


                    // AST REWRITE
                    // elements: EQUALS, lvalue, expression
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 65:30: -> ^( EQUALS lvalue expression )
                    {
                        // de\\gaalop\\clucalc\\input\\CluCalcParser.g:65:33: ^( EQUALS lvalue expression )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_EQUALS.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_lvalue.nextTree());
                        adaptor.addChild(root_1, stream_expression.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:66:5: logical_or_expression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_logical_or_expression_in_expression219);
                    logical_or_expression18=logical_or_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, logical_or_expression18.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, expression_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class argument_expression_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argument_expression_list"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:69:1: argument_expression_list : expression ( COMMA expression )* ;
    public final CluCalcParser.argument_expression_list_return argument_expression_list() throws RecognitionException {
        CluCalcParser.argument_expression_list_return retval = new CluCalcParser.argument_expression_list_return();
        retval.start = input.LT(1);
        int argument_expression_list_StartIndex = input.index();
        Object root_0 = null;

        Token COMMA20=null;
        CluCalcParser.expression_return expression19 = null;

        CluCalcParser.expression_return expression21 = null;


        Object COMMA20_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:70:3: ( expression ( COMMA expression )* )
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:70:7: expression ( COMMA expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expression_in_argument_expression_list234);
            expression19=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expression19.getTree());
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:70:18: ( COMMA expression )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:70:20: COMMA expression
            	    {
            	    COMMA20=(Token)match(input,COMMA,FOLLOW_COMMA_in_argument_expression_list238); if (state.failed) return retval;
            	    pushFollow(FOLLOW_expression_in_argument_expression_list241);
            	    expression21=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression21.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, argument_expression_list_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "argument_expression_list"

    public static class lvalue_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "lvalue"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:73:1: lvalue : unary_expression ;
    public final CluCalcParser.lvalue_return lvalue() throws RecognitionException {
        CluCalcParser.lvalue_return retval = new CluCalcParser.lvalue_return();
        retval.start = input.LT(1);
        int lvalue_StartIndex = input.index();
        Object root_0 = null;

        CluCalcParser.unary_expression_return unary_expression22 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:74:3: ( unary_expression )
            // de\\gaalop\\clucalc\\input\\CluCalcParser.g:74:5: unary_expression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_unary_expression_in_lvalue259);
            unary_expression22=unary_expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, unary_expression22.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, lvalue_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "lvalue"

    public static class logical_or_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "logical_or_expression"
    // de\\gaalop\\clucalc\\input\\CluCalcParser.g:77:1: logical_or_expression : logical_and_expression ( DOUBLE_BAR logical_and_expression )* ;
    public final CluCalcParser.logical_or_expression_return logical_or_expression() throws RecognitionException {
        CluCalcParser.logical_or_expression_return retval = new CluCalcParser.logical_or_expression_return();
        retval.start = input.LT(1);
        int logical_or_expression_StartIndex = input.index();
        Object root_0 = null;

        Token DOUBLE_BAR24=null;
        CluCalcParser.logical_and_expression_return logical_and_expression23 = null;
